# fyp

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  SETUP.md  package-lock.json  skills.md
backend/: .env.example  celeryapp.py  pyproject.toml  requirements-vercel.txt  requirements.txt  run.sh  setup_db.sh  vercel.json
backend/apps/agent/: admin.py  models.py  tasks.py  urls.py  views.py
backend/apps/agent/management/commands/: index_student_namespace.py  seed_dummy_data.py  validate_pinecone_setup.py
backend/apps/agent/migrations/: 0001_initial.py
backend/apps/agent/services/: pinecone_api.py  pinecone_utils.py  scraper.py  supervisor.py  tools.py
backend/config/: settings.py  urls.py  wsgi.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vercel.json
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/AdminDashboard/: AdminDashboard.tsx
frontend/src/components/ChatWidget/: ChatWidget.tsx
n8n/: 01_complaint_notification.json  02_send_email_teacher.json  03_hod_escalation.json
