[project]
name = "kfueit-agent-assist-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core Django
    "django==4.2.16",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.4.0",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
    "whitenoise==6.7.0",

    # LangGraph + LangChain
    "langgraph-supervisor==0.0.10",
    "langchain==0.3.7",
    "langchain-openai==0.2.8",
    "langchain-community==0.3.7",
    "langgraph>=0.3.5,<0.4.0",

    # OpenAI
    "openai==1.54.3",

    # Pinecone
    "pinecone>=7.3.0,<8",

    # Celery + Redis
    "celery==5.4.0",
    "redis==5.2.0",
    "django-celery-beat==2.7.0",

    # HTTP
    "requests==2.32.3",
    "httpx<0.28.0",
]

[tool.uv]
# mysqlclient and playwright excluded — need native libs not available on Vercel
# Install locally when needed:
#   pip install mysqlclient      (USE_DUMMY_DATA=False only)
#   pip install playwright && playwright install chromium  (scraper only)
